[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Office.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Level1.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Transition.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Music/Elevator-music.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Table.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Fonts/Poppins-Black.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.862745, 0.772549, 0.647059, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_offset = Vector2( 2, 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[node name="Level1" type="Node2D"]
script = ExtResource( 2 )

[node name="Table" parent="." instance=ExtResource( 5 )]
position = Vector2( 484.828, 304.259 )

[node name="Office" parent="." instance=ExtResource( 1 )]
layer = -1

[node name="Nametag" parent="Office/Intan" index="12"]
visible = true

[node name="TaskTimer" type="Timer" parent="."]
wait_time = 4.5
autostart = true
__meta__ = {
"_editor_description_": ""
}

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="BufferTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Transition" parent="." instance=ExtResource( 3 )]

[node name="ColorRect" parent="Transition" index="0"]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0
autoplay = true

[node name="PauseScreen" type="CanvasLayer" parent="."]
layer = 4

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.501961, 0.356863, 0.356863, 0.760784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="PauseScreen"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -44.0
margin_right = 127.5
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsPanel" type="MarginContainer" parent="PauseScreen/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PauseScreen/Popup/CreditsPanel"]
margin_right = 255.0
margin_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 1 )

[node name="YouWin" type="Label" parent="PauseScreen/Popup/CreditsPanel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 263.15, 45.5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.478431, 0.384314, 0.384314, 1 )
text = "PAUSED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="grab_task" from="Office" to="." method="_on_Office_grab_task"]
[connection signal="timeout" from="TaskTimer" to="." method="_on_TaskTimer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="timeout" from="BufferTimer" to="." method="_on_BufferTimer_timeout"]
[connection signal="animation_finished" from="Transition/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Table"]
[editable path="Office"]
[editable path="Office/Ainun"]
[editable path="Office/Intan"]
[editable path="Office/Transition"]
[editable path="Transition"]
